# agentic-brain-v2

./: .mcp.json  CLAUDE.md
project-brain/: .content-hashes.json  INIT.md  brain-mcp-server.py  brain.py  main.py  pyproject.toml
project-brain/archive/: LEARN-035_freqtrade-istrategy-technical-reference.md  LEARN-036_llm-code-generation-patterns-for-trading-strategies.md
project-brain/identity/: RULE-001_hooks-configuration-patterns.md  RULE-002_context-and-session-management.md  RULE-003_skills-and-claude-md-patterns.md  RULE-004_hooks-safe-modification-workflow.md  RULE-005_user-prime-directive-and-working-style.md  RULE-006_uv-venv-hygiene.md  SPEC-000_project-brain-architecture.md  SPEC-001_prover-multi-brain-architecture.md  SPEC-002_coder-brain-architecture.md  SPEC-003_quorum-capable-brain-implementation-plan.md  SPEC-004_agent-mailbox-protocol.md  SPEC-005_brain-v2-architecture.md
project-brain/knowledge/: CODE-001_brain-mcp-server.md  LEARN-001_semantic-compression-context-extension.md  LEARN-002_competitive-landscape-memory-indexing-systems.md  LEARN-003_qualitative-research-methods-for-knowledge-systems.md  LEARN-004_context-engineering-for-claude-code.md  LEARN-005_claude-code-official-best-practices.md  LEARN-006_claude-code-memory-system.md  LEARN-007_claude-code-skills-system.md  LEARN-008_claude-code-hooks-system.md  LEARN-009_claude-code-subagents-system.md  LEARN-010_claude-code-architecture-internals.md  LEARN-011_fat-index-convergence-validation.md  LEARN-012_brain-operational-drift-and-sync.md  LEARN-013_claude-code-mcp-system.md  (+42 more)
(+18 files in other folders)
